# RSMesh

./: .gitignore  Application.h  CMakeLists.txt  README.md  main.cpp
docs/: annotated.html  bbox3d_8cpp_source.html  bbox3d_8h_source.html  biharmonic2d_8h_source.html  biharmonic3d_8h_source.html  bit_8h_source.html  classes.html  classrsmesh_1_1common_1_1detail_1_1col__iterator-members.html  classrsmesh_1_1common_1_1detail_1_1col__iterator.html  classrsmesh_1_1common_1_1detail_1_1col__range__wrapper-members.html  classrsmesh_1_1common_1_1detail_1_1col__range__wrapper.html  classrsmesh_1_1common_1_1detail_1_1const__col__iterator-members.html  classrsmesh_1_1common_1_1detail_1_1const__col__iterator.html  classrsmesh_1_1common_1_1detail_1_1const__col__range__wrapper-members.html  classrsmesh_1_1common_1_1detail_1_1const__col__range__wrapper.html  classrsmesh_1_1common_1_1detail_1_1const__row__iterator-members.html  classrsmesh_1_1common_1_1detail_1_1const__row__iterator.html  classrsmesh_1_1common_1_1detail_1_1const__row__range__wrapper-members.html  classrsmesh_1_1common_1_1detail_1_1const__row__range__wrapper.html  classrsmesh_1_1common_1_1detail_1_1row__iterator-members.html  classrsmesh_1_1common_1_1detail_1_1row__iterator.html  classrsmesh_1_1common_1_1detail_1_1row__range__wrapper-members.html  classrsmesh_1_1common_1_1detail_1_1row__range__wrapper.html  classrsmesh_1_1common_1_1iterator__range-members.html  classrsmesh_1_1common_1_1iterator__range.html  classrsmesh_1_1fmm_1_1fmm__evaluator-members.html  classrsmesh_1_1fmm_1_1fmm__evaluator.html  classrsmesh_1_1fmm_1_1fmm__evaluator_1_1impl-members.html  classrsmesh_1_1fmm_1_1fmm__evaluator_1_1impl.html  classrsmesh_1_1fmm_1_1fmm__symmetric__evaluator-members.html  classrsmesh_1_1fmm_1_1fmm__symmetric__evaluator.html  classrsmesh_1_1fmm_1_1fmm__symmetric__evaluator_1_1impl-members.html  classrsmesh_1_1fmm_1_1fmm__symmetric__evaluator_1_1impl.html  classrsmesh_1_1geometry_1_1bbox3d-members.html  classrsmesh_1_1geometry_1_1bbox3d.html  classrsmesh_1_1geometry_1_1cuboid3d-members.html  classrsmesh_1_1geometry_1_1cuboid3d.html  classrsmesh_1_1geometry_1_1sphere3d-members.html  classrsmesh_1_1geometry_1_1sphere3d.html  classrsmesh_1_1interpolant-members.html  (+271 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_15.js  all_2.js  all_5.js  all_6.js  all_7.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_4.js  classes_5.js  classes_6.js  classes_a.js  classes_c.js  functions_3.js  functions_5.js  namespaces_0.js  searchdata.js  typedefs_1.js
html/: _f_abstract_balance_algorithm_8hpp_source.html  _f_abstract_buffer_8hpp_source.html  _f_abstract_cell_8hpp_source.html  _f_abstract_cheb_kernel_8hpp_source.html  _f_abstract_kernels_8hpp_source.html  _f_abstract_leaf_8hpp_source.html  _f_abstract_loader_8hpp_source.html  _f_abstract_mover_8hpp_source.html  _f_abstract_particle_container_8hpp_source.html  _f_abstract_sendable_8hpp_source.html  _f_abstract_serializable_8hpp_source.html  _f_abstract_spherical_kernel_8hpp_source.html  _f_abstract_unif_kernel_8hpp_source.html  _f_aca_8hpp_source.html  _f_algorithm_builder_8hpp_source.html  _f_algorithm_timers_8hpp_source.html  _f_aligned_memory_8hpp_source.html  _f_arranger_periodic_8hpp_source.html  _f_assert_8hpp_source.html  _f_avx2_8hpp_source.html  _f_avx_8hpp_source.html  _f_basic_cell_8hpp_source.html  _f_basic_cell_p_o_d_8hpp_source.html  _f_basic_kernels_8hpp_source.html  _f_basic_loader_8hpp_source.html  _f_basic_particle_container_8hpp_source.html  _f_basic_particle_container_indexed_mover_8hpp_source.html  _f_basic_particle_container_mover_8hpp_source.html  _f_binding_8hpp_source.html  _f_bitonic_sort_8hpp_source.html  _f_blas_8hpp_source.html  _f_blas_accelerate_8hpp_source.html  _f_blas_m_k_l_8hpp_source.html  _f_block_allocator_8hpp_source.html  _f_bool_array_8hpp_source.html  _f_buffer_reader_8hpp_source.html  _f_buffer_writer_8hpp_source.html  _f_cheb_cell_8hpp_source.html  _f_cheb_cell_p_o_d_8hpp_source.html  _f_cheb_dense_kernel_8hpp_source.html  (+1743 more)
html/search/: all_1.js  all_10.js  all_14.js  all_15.js  all_16.js  all_7.js  all_8.js  all_9.js  all_d.js  classes_0.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_d.js  enums_0.js  enums_1.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  (+35 more)
include/: interpolant.h  model.h  rsmesh.h  table.h  types.h
latex/: _f_abstract_balance_algorithm_8hpp_source.tex  _f_abstract_buffer_8hpp_source.tex  _f_abstract_cell_8hpp_source.tex  _f_abstract_cheb_kernel_8hpp_source.tex  _f_abstract_kernels_8hpp_source.tex  _f_abstract_leaf_8hpp_source.tex  _f_abstract_loader_8hpp_source.tex  _f_abstract_mover_8hpp_source.tex  _f_abstract_particle_container_8hpp_source.tex  _f_abstract_sendable_8hpp_source.tex  _f_abstract_serializable_8hpp_source.tex  _f_abstract_spherical_kernel_8hpp_source.tex  _f_abstract_unif_kernel_8hpp_source.tex  _f_aca_8hpp_source.tex  _f_algorithm_builder_8hpp_source.tex  _f_algorithm_timers_8hpp_source.tex  _f_aligned_memory_8hpp_source.tex  _f_arranger_periodic_8hpp_source.tex  _f_assert_8hpp_source.tex  _f_avx2_8hpp_source.tex  _f_avx_8hpp_source.tex  _f_basic_cell_8hpp_source.tex  _f_basic_cell_p_o_d_8hpp_source.tex  _f_basic_kernels_8hpp_source.tex  _f_basic_loader_8hpp_source.tex  _f_basic_particle_container_8hpp_source.tex  _f_basic_particle_container_indexed_mover_8hpp_source.tex  _f_basic_particle_container_mover_8hpp_source.tex  _f_binding_8hpp_source.tex  _f_bitonic_sort_8hpp_source.tex  _f_blas_8hpp_source.tex  _f_blas_accelerate_8hpp_source.tex  _f_blas_m_k_l_8hpp_source.tex  _f_block_allocator_8hpp_source.tex  _f_bool_array_8hpp_source.tex  _f_buffer_reader_8hpp_source.tex  _f_buffer_writer_8hpp_source.tex  _f_cheb_cell_8hpp_source.tex  _f_cheb_cell_p_o_d_8hpp_source.tex  _f_cheb_dense_kernel_8hpp_source.tex  (+1019 more)
resources/: qml.qrc
src/: CMakeLists.txt
tools/: Bunny.qml
(+130 files in other folders)
